Working prototype with working description.

--- a/elementary/index.html
+++ b/elementary/index.html
@@ -1,3 +1,4 @@
 <!DOCTYPE html>
-<script src="elementary.js"></script>
 <h1 id="clock">Please turn on JavaScript to bring this clock to life</h1>
+<p id="explain">Here we explain how to interpret the time for you.</p>
+<script src="elementary.js"></script>
