Upsize text, add day reference

--- a/elementary/index.html
+++ b/elementary/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<style>
+h1 {
+	font-size: 6em;
+}
+p {
+	font-size: 2em;
+}
+</style>
 <h1 id="clock">Please turn on JavaScript to bring this clock to life</h1>
 <p id="explain">Here we explain how to interpret the time for you.</p>
 <script src="elementary.js"></script>
