--- a/elementary/index.html
+++ b/elementary/index.html
@@ -9,5 +9,5 @@ p {
 </style>
 <h1 id="clock">Please turn on JavaScript to bring this clock to life</h1>
 <p id="explain">Here we explain how to interpret the time for you.</p>
-<p>Note: first day the order of the elements was random, and as such exactly the contrary of the current order. Sorry if you already learned the original order!</p>
+<p>Note: this is a prototype, and probably a pretty big change will come soon. Keep an eye on this page to see the system develop!</p>
 <script src="elementary.js"></script>
