Add meta tag unicode utf-8

--- a/elementary/index.html
+++ b/elementary/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8" />
+<title>Elementary Time</title>
 <style>
 h1 {
 	font-size: 6em;
@@ -49,6 +53,8 @@ p {
   top: -75px;
 }
 </style>
+</head>
+<body>
 <h1 id="clock">Please turn on JavaScript to bring this clock to life</h1>
 <p id="explain">Fire, Air, Water and Earth are used in a cycle to provide four blocks of six hours each. This time is the same everywhere on earth. It was created to give a similar idea of time everywhere in the world without relying on morning/evening etc in one specific location. Refer to the little disk below for when each element occurs in your exact location (down is midnight, up is noon, left is morning, right is evening).</p>
 <div id="reference">
@@ -73,3 +79,5 @@ for (var i = 0; i < all.length; i++) {
 } // -->
 </script>
 <script src="elementary.js"></script>
+</body>
+</html>
