--- a/elementary/index.html
+++ b/elementary/index.html
@@ -55,7 +55,7 @@ p {
 </style>
 </head>
 <body>
-<h1 id="clock">Please turn on JavaScript to bring this clock to life</h1>
+<h1 id="clock">Por favor ative o JavaScript para que o relógio funcione.</h1>
 <p id="explain">Fogo, Ar, Água e Terra são usados em um ciclo para providenciar quatro blocos de seis horas cada. Esse horário é o mesmo em todos os lugares do mundo. Foi criado para dar uma ideia similar de tempo no mundo todo sem se baseiar no conceito de dia/noite de cada região.</p>
 <p>Depois do @, está o número do quartia (o quarto do dia) baseado no sistema ''Unix epoch mod 200 plus 1''. Significa que esse número se reinicia a cada 200 quartias, ou 50 dias. Você pode usar a Hora Elementar para se certificar que a reunião vai ocorrer na data e horário certo, por exemplo. E se você quiser usar o sistema a longo praso, você pode combiná-lo com o calendário normal adicionando uma referência mensal.</p>
 <p>O disco abaixo é referente ao seu local atual, e muda de acordo com a sua localização geográfica. Imagine que você está de pé em cima do disco, em baixo é meia-noite, em cima é meio-dia, esquerda é manhã e direita é a tarde.</p>
